--- a/src/components/Project/style.scss
+++ b/src/components/Project/style.scss
@@ -106,7 +106,6 @@
             position: relative;
             transition: all 0.25s ease-in-out;
             overflow: hidden;
-            z-index: 1;
             display: none;
 
             &::before {
